iptables.v4
# Generated by iptables-save v1.6.1 on Sat Jul 27 02:37:24 2019
*filter
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:SSHBRUTE - [0:0]
:INPUT DROP [0:0]
:ICMPFLOOD - [0:0]
-A INPUT -s YOUR-IPADDR-HERE -j ACCEPT
#-A INPUT 1 -m set --match-set blacklist src -j DROP
-A INPUT -p tcp -m state --state NEW -j DROP  ! --syn 
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.0/8 ! -i lo -j DROP
-A INPUT -m addrtype -j DROP  --dst-type BROADCAST 
-A INPUT -m addrtype -j DROP  --dst-type MULTICAST 
-A INPUT -m addrtype -j DROP  --dst-type ANYCAST 
-A INPUT -d 224.0.0.0/4 -j DROP
-A SSHBRUTE -m recent  --name SSH --set
-A SSHBRUTE -m recent -m limit --limit 1/second --limit-burst 100 -j LOG  --name SSH --update --seconds 300 --hitcount 10 --log-level 4 --log-prefix "iptables: "
-A SSHBRUTE -m recent -j DROP  --name SSH --update --seconds 300 --hitcount 10 
-A SSHBRUTE -j DROP
-A ICMPFLOOD -m recent  --set --name ICMP --rsource
-A ICMPFLOOD -m recent -m limit --limit 1/sec --limit-burst 1 -j LOG  --update --seconds 1 --hitcount 6 --name ICMP --rsource --rttl --log-level 4 --log-prefix "iptables: "
-A ICMPFLOOD -m recent -j DROP  --update --seconds 1 --hitcount 6 --name ICMP --rsource --rttl 
-A ICMPFLOOD -j DROP
-A INPUT -p icmp -m conntrack --icmp-type 8 --ctstate NEW -j "iptables: "
-A INPUT -p tcp --tcp-flags ALL ACK,RST,SYN,FIN -j REJECT
-A INPUT -p tcp --tcp-flags ALL ACK,RST,SYN,FIN, -j LOG  --log-level 7 --log-prefix "iptables: "
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j REJECT
-A INPUT -p tcp --tcp-flags SYN,FIN SYN,FIN -j LOG  --log-level 7 --log-prefix "iptables: "
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j REJECT
-A INPUT -p tcp --tcp-flags SYN,RST SYN,RST -j LOG  --log-level 7 --log-prefix "iptables: "
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK,FIN,RST,URG,PSH SYN,ACK,FIN,RST,URG,PSH -j REJECT
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK,FIN,RST,URG,PSH SYN,ACK,FIN,RST,URG,PSH -j LOG  --log-level 7 --log-prefix "iptables: "
-A INPUT -p tcp --tcp-flags ALL NONE -j REJECT
-A INPUT -p icmp -m icmp --icmp-type address-mask-request -j REJECT
-A INPUT -p icmp -m icmp --icmp-type timestamp-request -j REJECT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m conntrack -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p udp -m udp -s 8.8.8.8 -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp -s 8.8.8.8 -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp -s 8.8.4.4 -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A INPUT -p udp -m udp -s 8.8.4.4 -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp -m conntrack -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport SQUIDPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p udp -m udp -m conntrack -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport SQUIDPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport -m conntrack -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 80,443
-A INPUT -p udp -m udp -m multiport -m conntrack -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 80,443
-A INPUT -p tcp -m tcp -m multiport -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 139,445
-A INPUT -p udp -m udp -m multiport -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 137,138
-A INPUT -p tcp -m tcp -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 2202 --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p udp -m udp -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 2202 --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m tcp -s YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 888 -j ACCEPT
-A INPUT -p udp -m udp -s YOUR-IPADDR-HERE -i YOUR-INTERFACE-HERE --dport 888 -j ACCEPT
-A INPUT -p tcp -m conntrack --dport 113 --ctstate NEW -j REJECT --reject-with tcp-reset  --syn 
-A INPUT -m limit --limit 1/second --limit-burst 100 -j LOG  --log-level 4 --log-prefix "iptables: "
-A INPUT -m state --state INVALID -j DROP
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack -s YOUR-IPADDR-HERE -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p udp -m udp -o YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp -o YOUR-INTERFACE-HERE --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp -o YOUR-INTERFACE-HERE --dport 123 --sport 123 -j ACCEPT
-A OUTPUT -p udp -m udp -m conntrack -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m conntrack -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m conntrack -o YOUR-INTERFACE-HERE --sport SQUIDPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p udp -m udp -m conntrack -o YOUR-INTERFACE-HERE --sport SQUIDPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 139,445
-A OUTPUT -p udp -m udp -m multiport -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 137,138
-A OUTPUT -p tcp -m tcp -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -o YOUR-INTERFACE-HERE --dport SSHPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p udp -m udp -m conntrack -s YOUR-LOCALNET-HERE -d YOUR-IPADDR-HERE -o YOUR-INTERFACE-HERE --dport SSHPORT-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p tcp -m tcp -m multiport -m conntrack -o YOUR-INTERFACE-HERE --ctstate ESTABLISHED,RELATED -j ACCEPT --dports 80,443
-A OUTPUT -m state --state INVALID -j DROP
COMMIT
# Completed on Sat Jul 27 02:37:24 2019

# Generated by webmin
*mangle
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
COMMIT
# Completed
# Generated by webmin
*nat
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
COMMIT
# Completed
